@@ -34,7 +34,8 @@ FacetWrap <- proto(Facet, {
   stamp_data <- function(., data) {
     data <- add_missing_levels(data, .$conditionals())
     lapply(data, function(df) {
-      data.matrix <- dlply(add_group(df), .$facets)
+      data.matrix <- dlply(add_group(df), .$facets, .drop = FALSE)
+      data.matrix <- as.list(data.matrix)
       dim(data.matrix) <- c(1, length(data.matrix))
       data.matrix
     })
@@ -91,25 +92,10 @@ FacetWrap <- proto(Facet, {
     
     gap <- matrix(list(nullGrob()), ncol = ncol, nrow = nrow)
     
-    if (.$free$y) {
-      axes_v <- grobMatrix(axes_v, nrow, ncol, .$as.table)
-    } else {
-      axes_v <- cbind(
-        grobMatrix(rep(axes_v[1], nrow), nrow, 1, .$as.table),
-        grobMatrix(list(nullGrob()), nrow, ncol - 1, .$as.table)
-      )
-    }
+    axes_v <- grobMatrix(axes_v, nrow, ncol, .$as.table)
     axes_width <- grobColWidth(axes_v)
     
     axes_h <- grobMatrix(axes_h, nrow, ncol, .$as.table)
-    if (.$free$x) {
-      axes_h <- grobMatrix(axes_h, nrow, ncol, .$as.table)
-    } else {
-      axes_h <- rbind(
-        grobMatrix(list(nullGrob()),        nrow - 1, ncol, .$as.table),
-        grobMatrix(rep(axes_h[1], ncol), 1, ncol, .$as.table)
-      )
-    }
     axes_height <- grobRowHeight(axes_h)
 
     all <- cweave(
@@ -149,12 +135,11 @@ FacetWrap <- proto(Facet, {
     layout_vp <- viewport(layout=layout, name="panels")
     
     children_vp <- vpList(
-      setup_viewports("panel",   guides$panel, clip = "on")
+      setup_viewports("panel",   guides$panel, clip = "off")
     )
     
     vpTree(layout_vp, children_vp)
   }
-
   
   # Position scales ----------------------------------------------------------
   
