@@ -1,6 +1,8 @@
 ggplot2 0.8.1  (2008-XX-XX)
 ----------------------------------------
 
+* facet_wrap: labels correctly clipped to axis ranges
+* facet_wrap: fixed bug with ncol = 1 or nrow = 1
 * tweaks to plot and legend layout
 * theme: new theme setting plot.margins to control the plot margins
 * theme: new theme setting legend.key.size determines size of keys in legend
